# gdp-talk

./: .gitignore  containers.hs  gdp-comb.hs  gdp-ex.hs  gdp-ghost.hs  gdp-talk.cabal  gdp.aux  gdp.nav  gdp.out  gdp.tex  gdp.toc  hashes.hs  head1.hs  headdt.agda  headmay.hs  idioms.hs  jmap.hs  jmap2.hs  listshape.hs  median.hs  mergeghost.hs  mergeghost2.hs  mergeghost3.hs  mergemay.hs  named-ex.hs  named.hs  oprev.hs  safehead.hs  sortby.hs  st2.hs  the.hs  uselist-wrong.hs  uselist.hs  usermerge.hs
src/: GDP.hs  Lists.hs  Main.hs  Named.hs  The.hs
src/GDP/: Merge.hs
