name:                gdp-talk
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/matt-noonan/gdp-talk#readme
license:             BSD3
license-file:        LICENSE
author:              Matt Noonan
maintainer:          mnoonan@kataskeue.com
copyright:           2018 Matt Noonan
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable gdp-demo
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Named
                     , GDP.Merge
                     , The
                     , GDP
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , MissingH